# gitserver

./: Cargo.toml  Makefile  NOTICE  README-zh.md  README.md  ROADMAP.md  cliff.toml
.github/workflows/: bench.yml  release.yml
crates/git-server-bench/benches/: concurrent.rs  git_clone.rs  http_clone.rs  pack.rs
crates/git-server-core/: Cargo.toml
crates/git-server-core/src/: backend.rs  discovery.rs  error.rs  lib.rs  pack.rs  pktline.rs  protocol_v2.rs  receive_pack.rs  refs.rs
crates/git-server-http/: Cargo.toml
crates/git-server-http/src/: error.rs  handlers.rs  lib.rs
crates/git-server-http/tests/: integration.rs
crates/git-server-http/tests/helpers/: mod.rs
crates/git-server/src/: main.rs
crates/gitserver/: Cargo.toml
crates/gitserver-bench/: Cargo.toml
crates/gitserver-bench/benches/: concurrent.rs  git_clone.rs  http_clone.rs  pack.rs  refs.rs
crates/gitserver-bench/license/: NOTICE
crates/gitserver-core/: Cargo.toml
crates/gitserver-core/license/: NOTICE
crates/gitserver-core/src/: backend.rs  discovery.rs  dynamic_registry.rs  error.rs  lib.rs  pack.rs  protocol_v2.rs  receive_pack.rs  refs.rs
crates/gitserver-http/: Cargo.toml
crates/gitserver-http/src/: error.rs  handlers.rs  lib.rs  state.rs
crates/gitserver-http/tests/: integration.rs
crates/gitserver-http/tests/helpers/: mod.rs
crates/gitserver/src/: main.rs
dev/bench/: data.js
docs/en/: api.md  architecture.md  index.md  installation.md  library.md  usage.md
docs/zh/: api.md  architecture.md  index.md  installation.md  library.md  usage.md
