[workspace]
resolver = "2"
members = [
    "crates/gitserver-core",
    "crates/gitserver-http",
    "crates/gitserver",
    "crates/gitserver-bench",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/WJQSERVER/gitserver"

[workspace.dependencies]
gitserver-core = { path = "crates/gitserver-core", version = "0.0.2" }
gitserver-http = { path = "crates/gitserver-http", version = "0.0.2" }
gix = "0.80.0"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
