[package]
name = "gitserver-http"
description = "HTTP layer for gitserver using Axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gitserver-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
http-body-util = "0.1"
http-body = "1"
tokio-stream = "0.1"
flate2 = "1"
zstd = "0.13"
base64 = "0.22"
subtle = "2"

[dev-dependencies]
gix = { workspace = true }
gix-pack = "0.67.0"
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json", "gzip", "zstd"] }
futures-util = "0.3"
